# bma400-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
examples/bma400-nrf52833/: Cargo.toml
examples/bma400-nrf52833-i2c/: Cargo.toml  LICENSE-MIT  README.md
examples/bma400-nrf52833-i2c-async/: Cargo.toml  README.md
examples/bma400-nrf52833-i2c-async/src/: main.rs
examples/bma400-nrf52833-i2c/.cargo/: config.toml
examples/bma400-nrf52833-i2c/src/: lib.rs
examples/bma400-nrf52833-i2c/tests/: integration.rs
examples/bma400-nrf52833-spi/: Cargo.toml  README.md
examples/bma400-nrf52833-spi-async/: Cargo.toml
examples/bma400-nrf52833-spi-async/.cargo/: config.toml
examples/bma400-nrf52833-spi-async/src/: main.rs
examples/bma400-nrf52833-spi/.cargo/: config.toml
examples/bma400-nrf52833-spi/src/: lib.rs
src/: accel_config.rs  actchg_config.rs  asynch.rs  auto_lp_config.rs  auto_wkup_config.rs  config.rs  fifo_config.rs  gen_int_config.rs  i2c.rs  int_config.rs  int_pin_config.rs  interface.rs  lib.rs  orientch_config.rs  registers.rs  spi.rs  tap_config.rs  types.rs  wkup_int_config.rs
src/asynch/: i2c.rs  mod.rs  spi.rs
src/blocking/: i2c.rs  mod.rs  spi.rs
src/config/: accel_config.rs  actchg_config.rs  auto_lp_config.rs  auto_wkup_config.rs  fifo_config.rs  gen_int_config.rs  int_config.rs  int_pin_config.rs  orientch_config.rs  tap_config.rs  wkup_int_config.rs
tests/: i2c.rs  spi.rs  test.rs
