[package]
name = "bma400"
version = "0.3.0-rc.1"
authors = ["Cory Frenette <cory@frenette.dev>"]
repository = "https://github.com/cfrenette/bma400-rs"
license = "MIT OR Apache-2.0"
description = "A platform-agnostic Rust driver for the BMA400 12-bit ultra-low-power 3-axis accelerometer."
readme = "README.md"
keywords = ["accelerometer", "mems", "bma400", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
rust-version = "1.76.0"

[dependencies]
bitflags = "1.3.2"
embedded-hal = "1.0.0-rc.1"
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
rustversion = "1.0.14"

[features]
async = ["dep:embedded-hal-async"]
i2c = []
i2c-default = ["i2c"]
i2c-alt = ["i2c"]
spi = []
float = []

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0-rc.1", features = ["eh1"] }
bma400 = { path = ".", features = ["i2c-default", "spi", "float"]}

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

