[package]
name = "bma400"
version = "1.0.0"
authors = ["Cory Frenette <cory@frenette.dev>"]
repository = "https://github.com/cfrenette/bma400-rs"
license = "MIT OR Apache-2.0"
description = "A platform-agnostic Rust driver for the BMA400 12-bit ultra-low-power 3-axis accelerometer."
readme = "README.md"
keywords = ["accelerometer", "mems", "bma400", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2024"

[dependencies]
bitflags = "1.3"
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }

[features]
i2c = []
spi = []
float = []
embedded-hal-async = ["dep:embedded-hal-async"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
bma400 = { path = ".", features = ["i2c", "spi", "float" ] }

