[package]
authors = ["cfrenette <cory@frenette.dev>"]
name = "bma400-nrf52833-i2c"
edition = "2024"
version = "1.0.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
nrf52833-hal = "0.19"
embedded-hal-bus = "0.3"
embedded-hal = "1.0"

[dependencies.bma400]
path = "../../"
features = ["i2c-default"]

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

